# Video-to-Knowledge

./: CMakeLists.txt  LICENSE  Makefile  README.md  config.example.ini  list_cams.cpp  realtime_video_pipeline.cpp
